# physical-ai-textbook

./: .gitignore  README.md
.github/workflows/: ci-backend.yml  deploy-frontend.yml
.specify/memory/: constitution.md
backend/: .dockerignore  .env.example  .env.production.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 42ac4e4d8617_create_all_tables.py
backend/app/: config.py  main.py
backend/app/api/: auth.py  chat.py  personalize.py  profile.py  translate.py
backend/app/db/: database.py  qdrant.py
backend/app/models/: cache.py  chat.py  user.py
backend/app/schemas/: auth.py  chat.py  personalize.py  profile.py  translate.py
backend/app/services/: auth_service.py  embedding_service.py  personalize_service.py  rag_service.py  translate_service.py
backend/tests/: conftest.py
frontend/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  vitest.config.ts
frontend/docs/: course-overview.mdx  hardware-requirements.mdx  intro.mdx
frontend/docs/module-1/: _category_.json  chapter-1.mdx  chapter-2.mdx
frontend/docs/module-2/: _category_.json  chapter-1.mdx  chapter-2.mdx  chapter-3.mdx
frontend/docs/module-3/: _category_.json  chapter-1.mdx  chapter-2.mdx
frontend/docs/module-4/: _category_.json  chapter-1.mdx  chapter-2.mdx
frontend/src/contexts/: AuthContext.tsx
frontend/src/css/: custom.css
frontend/src/pages/: index.module.css  index.tsx  signin.tsx  (+1 more)
specs/001-physical-ai-textbook/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+20 files in other folders)
